--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -5,8 +5,9 @@ server.port=8761
 spring.application.name=my-eureka-server
 
 # Eureka configuration
-eureka.client.register-with-eureka=false
+eureka.client.registerWithEureka=false
 eureka.client.fetch-registry=false
 
 # Enable Eureka server
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+#eureka.instance.prefer-ip-address=true
