--- a/user/src/main/resources/application.properties
+++ b/user/src/main/resources/application.properties
@@ -1,5 +1,14 @@
-server.port = 5054
+server.port = 8112
 
 # Application name
 spring.application.name=user
 eureka.instance.hostname=localhost
+
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=false
+spring.datasource.url=jdbc:mysql://localhost:3306/User
+spring.datasource.username=root
+spring.datasource.password=root@12345
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.hibernate.ddl-auto=update
+
